@@ -16,12 +16,14 @@ package com.lancedb.lance;
 
 import com.lancedb.lance.ipc.LanceScanner;
 import com.lancedb.lance.ipc.ScanOptions;
+import java.util.Arrays;
 import java.util.List;
+import org.apache.arrow.util.Preconditions;
 
 /**
  * Dataset format.
  * Matching to Lance Rust FileFragment.
- * */
+ */
 public class DatasetFragment {
   /** Pointer to the {@link Dataset} instance in Java. */
   private final Dataset dataset;
@@ -29,6 +31,8 @@ public class DatasetFragment {
 
   /** Private constructor, calling from JNI. */
   DatasetFragment(Dataset dataset, FragmentMetadata metadata) {
+    Preconditions.checkNotNull(dataset);
+    Preconditions.checkNotNull(metadata);
     this.dataset = dataset;
     this.metadata = metadata;
   }
@@ -40,7 +44,7 @@ public class DatasetFragment {
    */
   public LanceScanner newScan() {
     return LanceScanner.create(dataset, new ScanOptions.Builder()
-        .fragmentIds(List.of(metadata.getId())).build(), dataset.allocator);
+        .fragmentIds(Arrays.asList(metadata.getId())).build(), dataset.allocator);
   }
 
   /**
@@ -52,7 +56,7 @@ public class DatasetFragment {
   public LanceScanner newScan(long batchSize) {
     return LanceScanner.create(dataset,
         new ScanOptions.Builder()
-            .fragmentIds(List.of(metadata.getId())).batchSize(batchSize).build(), 
+            .fragmentIds(Arrays.asList(metadata.getId())).batchSize(batchSize).build(),
         dataset.allocator);
   }
 
@@ -63,8 +67,9 @@ public class DatasetFragment {
    * @return a dataset scanner
    */
   public LanceScanner newScan(ScanOptions options) {
+    Preconditions.checkNotNull(options);
     return LanceScanner.create(dataset,
-        new ScanOptions.Builder(options).fragmentIds(List.of(metadata.getId())).build(),
+        new ScanOptions.Builder(options).fragmentIds(Arrays.asList(metadata.getId())).build(),
         dataset.allocator);
   }
 
